# langchain_practice

./: 10_agent_bas_rag_application.py  1_basics.py  2_hugging_face.py  3_chat_models.py  4_hugging_face_chatModel.py  5_prompt_template.py  6_chain.py  7_rag_application.py  8_1_memory.py  8_2_langchain_memory.py  9_1_tools.py  9_2_ai_agent.py  pyproject.toml  readme.md  requirements.txt
